--- a/YumBlazor/Components/Pages/Cart_Pages/Cart.razor
+++ b/YumBlazor/Components/Pages/Cart_Pages/Cart.razor
@@ -1,6 +1,7 @@
 ﻿@page "/cart"
 @using Microsoft.AspNetCore.Authorization
 @using System.Globalization
+@using YumBlazor.Utility
 @inject AuthenticationStateProvider _AuthenticationStateProvider
 @inject IShoppingCartRepository _cartRepository
 @attribute [Authorize]
@@ -133,6 +134,7 @@ else
         var user = authState.User;
         OrderHeader.Email = user.FindFirst(u => u.Type.Contains("email"))?.Value;
         OrderHeader.UserId = user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value;
+        OrderHeader.Status = SD.StatusPending;
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
@@ -158,8 +160,6 @@ else
         }
         OrderHeader.OrderTotal = Math.Round(OrderHeader.OrderTotal, 2);
     }
-
-
 
     private async Task UpdateCartItem(int productId, int updateBy)
     {      
