--- a/YumBlazor/Components/Layout/NavMenu.razor
+++ b/YumBlazor/Components/Layout/NavMenu.razor
@@ -28,6 +28,16 @@
             </NavLink>
         </div>
 
+        <div class="nav-item mx-2">
+            <NavLink class="nav-link" href="/cart">
+                <span class="bi bi-cart3" aria-hidden="true"></span> Cart
+            </NavLink>
+        </div>
+        <div class="nav-item mx-2">
+            <NavLink class="nav-link" href="/order/list">
+                <span class="bi bi-card-list" aria-hidden="true"></span> Order List
+            </NavLink>
+        </div>
        
 
         <div class="nav-item px-3">
