--- a/YumBlazor/Components/Pages/Order_Pages/OrderDetails.razor
+++ b/YumBlazor/Components/Pages/Order_Pages/OrderDetails.razor
@@ -16,28 +16,34 @@ else
             </div>
             <hr />
             <div class="px-3">
-                <p>Order Id:</p>
-                <p>Name: </p>
-                <p>Email: </p>
-                <p>Phone: </p>
-                <p>Order Status:  </p>
+                <p>Order Id: @OrderHeader.Id</p>
+                <p>Name: @OrderHeader.Name</p>
+                <p>Email: @OrderHeader.Email</p>
+                <p>Phone: @OrderHeader.PhoneNumber</p>
+                <p>Order Status: @OrderHeader.Status</p>
             </div>
             <hr />
             <div class="card-body">
                 <h4 class="text-success">Menu Items</h4>
-                <div class="d-flex">
-                    <div class="d-flex w-100 justify-content-between">
-                        <p>
-                            &nbsp; -- ProductName
-                        </p>
-                        <p>
-                            Price x Count =
-                        </p>
+
+                @foreach(var details in OrderHeader.OrderDetails)
+                {
+                    <div class="d-flex">
+                        <div class="d-flex w-100 justify-content-between">
+                            <p>
+                                &nbsp; -- @details.ProductName
+                            </p>
+                            <p>
+                                Price x Count =
+                            </p>
+                        </div>
+                        <div class="ps-4">
+                            TOTAL
+                        </div>
                     </div>
-                    <div class="ps-4">
-                        TOTAL
-                    </div>
-                </div>
+
+
+                }
                 <hr />
                 <h4 class="text-success text-end">
                     Order Total
