--- a/YumBlazor/Components/Pages/Order_Pages/OrderDetails.razor
+++ b/YumBlazor/Components/Pages/Order_Pages/OrderDetails.razor
@@ -1,4 +1,5 @@
 ﻿@page "/order/details/{Id:int}"
+@using System.Globalization
 @inject IOrderRepository _orderRepository
 
 @if (IsProcessing)
@@ -34,11 +35,11 @@ else
                                 &nbsp; -- @details.ProductName
                             </p>
                             <p>
-                                Price x Count =
+                                @details.Price.ToString("C",CultureInfo.GetCultureInfo("en-us")) x @details.Count =
                             </p>
                         </div>
                         <div class="ps-4">
-                            TOTAL
+                            @((details.Price * @details.Count).ToString("C", CultureInfo.GetCultureInfo("en-us")))
                         </div>
                     </div>
 
@@ -46,12 +47,12 @@ else
                 }
                 <hr />
                 <h4 class="text-success text-end">
-                    Order Total
+                    @OrderHeader.OrderTotal.ToString("C", CultureInfo.GetCultureInfo("en-us"))
                 </h4>
                 <hr />
                 <div class="row">
                     <div class="col-5">
-                        <a href="" class="btn btn-secondary  m-2 p-2" style="width:150px;">Back to Orders</a>
+                        <a href="order/list" class="btn btn-secondary  m-2 p-2" style="width:150px;">Back to Orders</a>
                     </div>
                     <div class="col-7 text-end">
                         <button class="btn btn-danger m-2 p-2" style="width:150px;">Cancelled</button>
