--- a/YumBlazor/Components/Pages/Order_Pages/OrderList.razor
+++ b/YumBlazor/Components/Pages/Order_Pages/OrderList.razor
@@ -37,7 +37,7 @@ else
                         <RadzenDataGridColumn Property="OrderTotal" Title="Order Total" FormatString="{0:C}" Width="120px" />
                         <RadzenDataGridColumn Property="OrderDate" Title="Order Date" FormatString="{0:d}" Width="160px" />
                         <RadzenDataGridColumn Property="Status" Title="Status" FormatString="{0:d}" Width="160px" />
-                            <RadzenDataGridColumn Title="Action" Sortable="false" Filterable="false" Width="80px" TextAlign="TextAlign">
+                            <RadzenDataGridColumn Title="Action" Sortable="false" Filterable="false" Width="80px" TextAlign="TextAlign.Center">
                                 <Template Context="orderHeader">
                                     <RadzenButton Shade="Shade.Lighter" Text="Details" ButtonStyle="ButtonStyle.Primary"
                                     Class="@(()=>_navigationManager.NavigateTo($"order/details/{orderHeader.Id}"))"></RadzenButton>
