--- a/YumBlazor/Components/Pages/Cart_Pages/Cart.razor
+++ b/YumBlazor/Components/Pages/Cart_Pages/Cart.razor
@@ -2,10 +2,12 @@
 @using Microsoft.AspNetCore.Authorization
 @using System.Globalization
 @using YumBlazor.Utility
+@using YumBlazor.Services
 @inject AuthenticationStateProvider _AuthenticationStateProvider
 @inject IShoppingCartRepository _cartRepository
 @inject IOrderRepository _orderRepository
 @inject NavigationManager _navigationManager
+@inject SharedStateService _sharedStateService
 @attribute [Authorize]
 
 @if (IsProcessing)
@@ -166,6 +168,8 @@ else
         //add item to cart
         var result = await
         _cartRepository.UpdateCartAsync(OrderHeader.UserId, productId, updateBy);
+
+        _sharedStateService.TotalCartCount = await _cartRepository.GetTotalCartCountAsync(OrderHeader.UserId);
         await LoadCart();
     }
     private async Task ProcessOrderCreation()
